--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <p>Scale Your Business<br><span class="single">10x</span> With Powerful<br><span class="double"><b>Bare-Metal-servers<b></span><br>Tailored With Startsups,<br>SMB'& Enterprices</p>
             </div>
             <div class="transfarmer">
-                <img src="../Red-Switch/OBJECTS (1).png">
+                <img src="./OBJECTS (1).png">
              
             </div>
         </div>
@@ -29,7 +29,7 @@
             <button> view Prising</button>
         </div>
         <div class="star">
-            <img src="../Red-Switch/image 28.png">
+            <img src="./image 28.png">
         </div>
          <div class="Score">
             <p>Trust Score 3.4 Excellent</p>
@@ -223,7 +223,7 @@
                         <button id="ups"> USE CHASE #1</button>
                     </div>
                     <div class="pic">
-                        <img src="../Red-Switch/Image.png">
+                        <img src="./Image.png">
                     </div>
 
                     <div class=" hhh">
@@ -240,7 +240,7 @@
                         <button id="ups"> USE CHASE #2</button>
                     </div>
                     <div class="pic">
-                        <img src="../Red-Switch/Image.png">
+                        <img src="./Image.png">
                     </div>
 
                     <div class=" hhh">
@@ -258,7 +258,7 @@
                         <button id="ups"> USE CHASE #3</button>
                     </div>
                     <div class="pic">
-                        <img src="../Red-Switch/Image.png">
+                        <img src="./Image.png">
                     </div>
 
                     <div class=" hhh">
