--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                 </div>
                 <div class="asif-mughal">
                     <div class="box">
-                        <img src="./_Checkbox base.svg">
+                        <img src="./c.svg">
                     </div>
                     <div class="dont">
                         <p>I don't seem to get proper support. My hosting provider takes hours and days to reply</p>
@@ -478,7 +478,7 @@
                 </div>
                 <div class="asif-mughal">
                     <div class="box">
-                        <img src="./_Checkbox base.svg">
+                        <img src="./c.svg">
                     </div>
                     <div class="dont">
                         <p>My application is too slow, and I have no clue how to fix that</p>
@@ -486,7 +486,7 @@
                 </div>
                 <div class="asif-mughal">
                     <div class="box">
-                        <img src="./_Checkbox base.svg">
+                        <img src="./c.svg">
                         <!-- <input type="checkbox" checked id="vehicle2" name="vehicle2" value="Car"> -->
                     </div>
                     <div class="dont">
@@ -495,7 +495,7 @@
                 </div>
                 <div class="asif-mughal">
                     <div class="box">
-                        <img src="./_Checkbox base.svg">
+                        <img src="./c.svg">
                     </div>
                     <div class="dont">
                         <p>I am paying high dollar for mediocore hardware and service</p>
@@ -503,7 +503,7 @@
                 </div>
                 <div class="asif-mughal">
                     <div class="box">
-                        <img src="./_Checkbox base.svg">
+                        <img src="./c.svg">
                     </div>
                     <div class="dont">
                         <p>I am paying high dollar for mediocore hardware and service</p>
@@ -511,7 +511,7 @@
                 </div>
                 <div class="asif-mughal">
                     <div class="box">
-                        <img src="./_Checkbox base.svg">
+                        <img src="./c.svg">
                     </div>
                     <div class="dont">
                         <p>I need a reliable hosting partner who can assist me in scaling my business projects and applications.</p>
