--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <link rel="stylesheet" href="./figma.css">
     <title>RedSwitches</title>
     <link rel="icon" type="image/x-icon" href="./Icon.png">
-</head>
 
 <body>
 
     <!-- Header Start -->
     <header>
+        <div class="container-sm">
         <div id="container">
             <div class="L-R">
                 <div class="L">
-                    <img src="../Red-Switch/Icon.png">
+                    <img src="./Icon.png">
                 </div>
                 <div class="Red">
                     <p>RedSwitches</p>
@@ -48,6 +48,7 @@
                 </div>
 
             </div>
+        </div>
         </div>
     </header>
 
